# agentic-RAG-trader

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 597bd0688fb4_init.py  8e8757e0ec19_filing_report_date_replaces_fiscal_.py  9f6b21b80a84_row_level_security_on_tenant_tables.py  a5e5b9b6d326_widen_signals_kind_to_32.py  c1a2b3d4e5f6_week5_flat_decision_order_outcome_eval_runs.py  d2b3c4e5f6a7_add_human_decision_to_decisions.py  dc5f45ab4851_user_role_encrypted_rh_tokens.py  e3c4d5f6a7b8_drop_backtest_reshape_outcomes.py  f4d5e6a7b8c9_add_user_id_tenant_key_to_orders_outcomes.py
app/: config.py  db.py  models.py  security.py
app/agents/: graph.py  logging.py  nodes.py  state.py
app/api/: main.py
app/eval/: ab_embeddings.py  conftest.py  golden.json  golden.py  test_rag.py
app/guardrails/: rules.py  test_rules.py
app/ingestion/: edgar.py  fmp.py
app/rag/: build.py  chunk.py  diff.py  embed.py  retrieve.py
scripts/: ingest_golden.py  spike_robinhood.py
web/: package-lock.json  package.json
web/src/: App.tsx  Dashboard.tsx  LinkPrompt.tsx  main.tsx
web/src/lib/: api.ts
