[project]
name = "agentic-rag-trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.137.1",
    "google-genai>=2.8.0",
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langchain-mcp-adapters>=0.3.0",
    "langgraph>=1.2.5",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.14.5",
    "selectolax>=0.4.10",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# Alembic-generated migrations are reviewed for correctness, not style.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]   # errors, pyflakes, import-sort, pyupgrade
